# straight

./: .gitignore  AGENTS.md  LICENSE  PHASE_STATUS.md  PROJECT_PLAN.md  README.md  pubspec.yaml  skills-lock.json
.opencode/skills/brand/docs/: brand-guidelines.md
lib/: app.dart  main.dart
lib/core/: app_context.dart  coordinator.dart
lib/core/audio/: audio_capture.dart  resampler.dart  vad.dart
lib/core/download/: model_downloader.dart
lib/core/hotkey/: hotkey_service.dart
lib/core/injection/: text_injector.dart
lib/core/llm/: llm_engine.dart  qwen_engine.dart
lib/core/native/: native_library_loader.dart
lib/core/pipeline/: backtrack_handler.dart  capitalizer.dart  command_parser.dart  contraction_normalizer.dart  dictation_pipeline.dart  filler_remover.dart  number_formatter.dart  punctuator.dart  style_cleaner.dart  word_replacer.dart
lib/core/startup/: startup_service.dart
lib/core/storage/: dictionary_store.dart  history_store.dart  settings_store.dart  snippets_store.dart  storage_service.dart
lib/core/stt/: moonshine_engine.dart  qwen_asr_engine.dart  stt_engine.dart  stt_pipeline.dart  whisper_engine.dart
lib/features/bubble/: bubble_controller.dart  bubble_overlay.dart  desktop_bubble.dart  desktop_bubble_service.dart  gooey_text.dart  waveform_painter.dart
lib/features/dictionary/: add_word_dialog.dart  dictionary_page.dart
lib/features/history/: history_page.dart
lib/features/onboarding/: hotkey_step.dart  mic_test_step.dart  onboarding_page.dart  permission_step.dart  tutorial_step.dart
lib/features/settings/: hotkey_capture_tile.dart  model_selector.dart  settings_page.dart
lib/features/snippets/: add_snippet_dialog.dart  snippets_page.dart
lib/shared/theme/: app_theme.dart  colors.dart
lib/shared/widgets/: app_drawer.dart  app_surface.dart  background_shapes.dart  empty_state.dart  search_field.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
native/: build.sh
native/moonshine_wrapper/: CMakeLists.txt  moonshine_wrapper.cpp
native/qwen_asr_wrapper/: CMakeLists.txt  qwen_asr_wrapper.c
native/qwen_wrapper/: CMakeLists.txt  qwen_wrapper.c
native/whisper_wrapper/: CMakeLists.txt  generate_importlib.bat  whisper_wrapper.c
test/: pipeline_test.dart  stt_pipeline_test.dart  vad_test.dart
tool/: moonshine_smoke.dart  qwen_asr_smoke.dart  whisper_smoke.dart
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp  win32_window.cpp
